# singleton

./: CMakeLists.txt  main.cpp  pair.h  singleton.h
